# AutoCleaner

./: .gitignore  Cargo.toml  README.md  autocleaner_setup.bat
autocleaner/: Cargo.toml  build.rs
autocleaner/src/: app.rs  cleanup.rs  config.rs  gui.rs  main.rs  notifier.rs  settings.rs  shared_flag.rs  singleton_lock.rs  startup.rs  tray.rs
xtask/: Cargo.toml
xtask/src/: main.rs
