[package]
name = "autocleaner"
version = "0.1.0"
edition = "2021"
include = ["resources/icon.ico", "src/**", "Cargo.toml"]

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.13"
chrono = "0.4"
walkdir = "2.4"
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "minwindef",
    "shellapi",
    "libloaderapi",
    "commctrl",
    "basetsd",
] }
crossbeam-channel = "0.5"
trayicon = { path = "../thirdparty/trayicon/" }

[[bin]]
name = "autocleaner"
path = "src/main.rs"
