[package]
name = "autocleaner"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = ["resources/icon.ico", "src/**", "Cargo.toml", "build.rs"]

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.13"
chrono = "0.4"
walkdir = "2.4"
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "minwindef",
    "shellapi",
    "libloaderapi",
    "commctrl",
    "basetsd",
] }
crossbeam-channel = "0.5"
trayicon = { path = "../thirdparty/trayicon/" }
shared_memory = "0.12.4"
once_cell = "1.18"
win-toast-notify = "0.1.6"
ico = "0.3"
fs4 = "0.6"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "autocleaner"
path = "src/main.rs"
